href on main page navigates to /projects/ by default

--- a/projects.json
+++ b/projects.json
@@ -1,8 +1,8 @@
 [
     {
-      "title": "SINGLE-BOARD COMPUTER",
-      "image": "images/single-board-computer.jpg",
-      "link": "single-board-computer.html",
+      "title": "PHOTODETECTOR",
+      "image": "images/photodetector.jpg",
+      "link": "photodetector.html",
       "visible": true
     },
     {
