Project sub-page structure based on main page template.

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "PHOTODETECTOR",
     "image": "images/photodetector.jpg",
-    "link": "photodetector.html",
+    "link": "photodetector/index.html",
     "visible": true,
     "size": [1, 1]
   },
